--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,14 +4,13 @@
 # Version      Date        Info
 # 1.1          2021          Init Version
 
-#---------------------------------------------------------------------
 name: ci-cd-pipeline-to-aws-elb
 env:
-  EB_S3_BUCKET_NAME 			  : "serjio-flask-app-packages"
-  EB_APP_NAME       			  	  : "GitHub-Actions-to-AWS"
-  EB_ENVIRONMENT_NAME               : "Python-env"
-  DEPLOY_PACKAGE_NAME               : "py_app_${{ github.sha }}.zip"
-  AWS_REGION_NAME           	          : "us-west-2"
+  EB_S3_BUCKET_NAME 		: "serjio-flask-app-packages"
+  EB_APP_NAME       		: "GitHub-Actions-to-AWS"
+  EB_ENVIRONMENT_NAME   : "Python-env"
+  DEPLOY_PACKAGE_NAME   : "py_app_${{ github.sha }}.zip"
+  AWS_REGION_NAME       : "us-west-2"
 
 on: 
   push:
@@ -24,28 +23,28 @@ jobs:
 
     steps:
     - name: Git clone repo to test
-       uses: actions/checkout@v1.0
+      uses: actions/checkout@v1.0
        
     - name: Create zip deployment package
-       run   : zip -r ${{ env.DEPLOY_PACKAGE_NAME }} ./ -x *.git*
+      run   : zip -r ${{ env.DEPLOY_PACKAGE_NAME }} ./ -x *.git*
       
     - name: Configure aws credentials
-       uses: aws-actions/configure-aws-credentials@v1.0
-       with:
-        aws-access-key-id    	 :  ${{ secrets.AWS_ACCESS_KEY }}
-        aws-secret-access-key	 :  ${{ secrets.AWS_SECRET_KEY }}
-        aws-region          		 :  ${{ env.AWS_REGION_NAME }}
+      uses: aws-actions/configure-aws-credentials@v1.0
+      with:
+        aws-access-key-id    	:  ${{ secrets.AWS_ACCESS_KEY }}
+        aws-secret-access-key	:  ${{ secrets.AWS_SECRET_KEY }}
+        aws-region          	:  ${{ env.AWS_REGION_NAME }}
         
     - name: Copy Deployment package to S3 bucket
-       run : aws s3 cp ${{ env.DEPLOY_PACKAGE_NAME }}  s3://${{ env.EB_S3_BUCKET_NAME }}/
+      run : aws s3 cp ${{ env.DEPLOY_PACKAGE_NAME }}  s3://${{ env.EB_S3_BUCKET_NAME }}/
     
     - name: CI finished
-       run : echo "CI Pipeline part Finished successfully!"
+      run : echo "CI Pipeline part Finished successfully!"
 
 
   cd_part:
     runs-on: amazon-linux-2/3.1.5
-    needs   : [ci_part]
+    needs  : [ci_part]
 
     steps:
     - name: Configure AWS Credentials
@@ -53,9 +52,9 @@ jobs:
       with:
         aws-access-key-id    	:  ${{ secrets._AWS_ACCESS_KEY }}
         aws-secret-access-key	:  ${{ secrets.AWS_SECRET_KEY }}
-        aws-region			:  ${{ env.AWS_REGION_NAME }}
+        aws-region			      :  ${{ env.AWS_REGION_NAME }}
     
-    - name: Create new ElasticBeanstalk App version
+    - name: Create new ElBe App version
       run : |
         aws elasticbeanstalk create-application-version \
         --application-name ${{ env.EB_APP_NAME }} \
@@ -64,10 +63,10 @@ jobs:
         --description "CoimmitSHA-${{ github.sha }}"
        
     - name: Deploy new ElasticBeanstalk App Version
-      run : aws elasticbeanstalk update-environment --environment-name ${{ env.EB_ENVIRONMENT_NAME }} --version-label "Ver-${{ github.sha }}"
+      run : aws elasticbeanstalk update-environment --environment-name ${{ env.EB_ENVIRONMENT_NAME }} --version-label "ver-${{ github.sha }}"
       
     - name: Print CD finish
-      run : echo "CD Pipeline part Finished successfully!"
+      run : echo "CD Pipeline Finished successfully!"
 
 
 
