--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,9 +26,9 @@ jobs:
       uses: actions/checkout@v1.0
        
     - name: Create zip deployment package
-      run   : zip -r ${{ env.DEPLOY_PACKAGE_NAME }} ./ -x *.git*
+      run : zip -r ${{ env.DEPLOY_PACKAGE_NAME }} ./ -x *.git*
       
-    - name: Configure aws credentials
+    - name: Configuring aws credentials for deployment 
       uses: aws-actions/configure-aws-credentials@v1.0
       with:
         aws-access-key-id    	:  ${{ secrets.AWS_ACCESS_KEY }}
