--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ name: ci-cd-pipeline-to-aws-elb
 env :
   EB_S3_BUCKET_NAME     : "serjio-flask-app-packages"
   EB_APP_NAME           : "GitHub-Actions-to-AWS"
-  EB_ENVIRONMENT_NAME   : "Python-env"
+  EB_ENVIRONMENT_NAME   : "Githubactionstoaws-env"
   DEPLOY_PACKAGE_NAME   : "py_app_${{ github.sha }}.zip"
   AWS_REGION_NAME       : "us-west-2"
 
@@ -28,44 +28,7 @@ jobs:
     - name: Create zip deployment package
       run : zip -r ${{ env.DEPLOY_PACKAGE_NAME }} ./ -x *.git*
       
-    - name: Configuring aws credentials for deployment 
-      uses: aws-actions/configure-aws-credentials@v1.1
-      with:
-        aws-access-key-id    	:  ${{ secrets.AWS_ACCESS_KEY }}
-        aws-secret-access-key	:  ${{ secrets.AWS_SECRET_KEY }}
-        aws-region          	:  ${{ env.AWS_REGION_NAME }}
-        
-    - name: Copy Deployment package to S3 bucket
-      run : aws s3 cp ${{ env.DEPLOY_PACKAGE_NAME }}  s3://${{ env.EB_S3_BUCKET_NAME }}/
     
-    - name: CI finished
-      run : echo "CI Pipeline part Finished successfully!"
-
-  cd_part:
-    runs-on: amazon-linux-2/3.1.5
-    needs  : [ci_part]
-
-    steps:
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v1.1
-      with:
-        aws-access-key-id     :  ${{ secrets._AWS_ACCESS_KEY }}
-        aws-secret-access-key :  ${{ secrets.AWS_SECRET_KEY }}
-        aws-region            :  ${{ env.AWS_REGION_NAME }}
-    
-    - name: Create new ElBe App version
-      run : |
-        aws elasticbeanstalk create-application-version \
-        --application-name ${{ env.EB_APP_NAME }} \
-        --source-bundle S3Bucket="${{ env.EB_S3_BUCKET_NAME }}",S3Key="${{ env.DEPLOY_PACKAGE_NAME }}" \
-        --version-label "Ver-${{ github.sha }}" \
-        --description "CoimmitSHA-${{ github.sha }}"
-       
-    - name: Deploy new ElasticBeanstalk App Version
-      run : aws elasticbeanstalk update-environment --environment-name ${{ env.EB_ENVIRONMENT_NAME }} --version-label "ver-${{ github.sha }}"
-      
-    - name: Print CD finish
-      run : echo "CD Pipeline Finished successfully!"
 
 
 
