--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 #--------------------------------------------------------------
-# GitHubAWDeploy html_App to AWS EB
+# GitHubAWtoDeploy html_App to AWS EB
 #
 # Version      Date        Info
 # 1.1          2021        Init Version
