--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,11 @@
 # Icon must end with two \r
-Icon
+
 
 # Thumbnails
-._*
-
 # Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
 
-# Directories potentially created on remote AFP share
-Network Trash Folder
-Temporary Items
+# Directories potentially created on remote * share
 
-# Diagnostic reports (https://nodejs.org/api/report.html)
-report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+# Diagnostic reports 
 
