--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 #--------------------------------------------------------------
 # GitHubAWtoDeploy html_App to AWS EB
-#
+# deploy runs on machine AWS - amazon-linux-2/3.1.5
 # Version      Date        Info
 # 1.0          2021        Init Version
 
@@ -19,7 +19,7 @@ on:
 
 jobs:
   ci_part:
-    runs-on: amazon-linux-2/3.1.5
+    runs-on: ubuntu-16.04
 
     steps:
     - name: Git clone repo to test
@@ -42,7 +42,7 @@ jobs:
       run : echo "CI Pipeline part Finished successfully!"
 
   cd_part:
-    runs-on: amazon-linux-2/3.1.5
+    runs-on: ubuntu-16.04
     needs  : [ci_part]
 
     steps:
