--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
       run : zip -r ${{ env.DEPLOY_PACKAGE_NAME }} ./ -x *.git*
       
     - name: Configuring aws credentials for deployment 
-      uses: aws-actions/configure-aws-credentials@master
+      uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id    	:  ${{ secrets.AWS_ACCESS_KEY }}
         aws-secret-access-key	:  ${{ secrets.AWS_SECRET_KEY }}
