--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,8 @@ env :
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: 
-       - master
+    branches: [ main ] 
+    # or master with dash under 3-d symbol 
  # pull_request:
     #branches: [ main ]
 
